--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/IIM-Creative-Technology/Pigeon-chatapp-nodejs#readme",
   "dependencies": {
+    "autoprefixer": "^10.4.2",
     "express": "^4.17.2",
     "moment": "^2.29.1",
     "socket.io": "^4.4.1",
